--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     $(document).ready(function () {
-      $('.slide').slick({
+      $('.slider').slick({
         infinite: true,
         slidesToShow: 3,
         slidesToScroll: 1,
